<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MoveWithObjectActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tv_map_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/red"
            android:fontFamily="@font/rajdhani_bold"
            android:gravity="center"
            android:padding="8dp"
            android:text="TextView"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="@+id/img_map_photo"
            app:layout_constraintStart_toStartOf="@+id/img_map_photo"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_map_photo"
            android:layout_width="0dp"
            android:layout_height="175dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_map_name"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/red"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/description"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_map_photo" />

        <TextView
            android:id="@+id/tv_map_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_description" />

        <TextView
            android:id="@+id/tv_general"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/red"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/general"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_map_description" />

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_general">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_location"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/location"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_map_location"
                    android:layout_width="285dp"
                    android:layout_height="wrap_content"
                    android:text="TextView" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_coordinate"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/coordinate"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_map_coordinate"
                    android:layout_width="285dp"
                    android:layout_height="wrap_content"
                    android:text="TextView" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_site"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/spike_sites"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_map_site"
                    android:layout_width="285dp"
                    android:layout_height="wrap_content"
                    android:text="TextView" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_feature"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/map_features"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_map_feature"
                    android:layout_width="255dp"
                    android:layout_height="wrap_content"
                    android:text="TextView" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_added"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/added"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_map_added"
                    android:layout_width="285dp"
                    android:layout_height="wrap_content"
                    android:text="TextView" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_rotation"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/rotation_status"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_map_rotation"
                    android:layout_width="225dp"
                    android:layout_height="wrap_content"
                    android:text="TextView" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_codename"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/codename"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_map_codename"
                    android:layout_width="285dp"
                    android:layout_height="wrap_content"
                    android:text="TextView" />
            </TableRow>

        </TableLayout>

        <TextView
            android:id="@+id/tv_minimap"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/red"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/minimap"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

        <ImageView
            android:id="@+id/img_map_mini"
            android:layout_width="0dp"
            android:layout_height="385dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_minimap"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_share"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/like"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_map_mini" />

        <Button
            android:id="@+id/action_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/share"
            app:icon="@drawable/baseline_share_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_share" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>