<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    tools:context=".AboutActivity">

    <TextView
        android:id="@+id/about_creator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rajdhani_bold"
        android:text="@string/creator"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32999998" />

    <ImageView
        android:id="@+id/img_foto_profil"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        android:src="@drawable/pas_foto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/about_creator"
        app:layout_constraintStart_toStartOf="@+id/about_creator"
        app:layout_constraintTop_toBottomOf="@+id/about_creator"
        app:layout_constraintVertical_bias="0.07999998" />

    <TextView
        android:id="@+id/tv_profil_nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/name"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/img_foto_profil"
        app:layout_constraintStart_toStartOf="@+id/img_foto_profil"
        app:layout_constraintTop_toBottomOf="@+id/img_foto_profil" />

    <TextView
        android:id="@+id/tv_profil_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/email"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/tv_profil_nama"
        app:layout_constraintStart_toStartOf="@+id/tv_profil_nama"
        app:layout_constraintTop_toBottomOf="@+id/tv_profil_nama" />
</androidx.constraintlayout.widget.ConstraintLayout>